@@ -26,8 +26,9 @@ public class StudentService {
     public List<StudentDTO.Response> getAllStudents() {
         return studentRepository.findAll()
                 .stream()
-                .map(StudentDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                //.map(StudentDTO.Response::fromEntity)
+                .map(student -> StudentDTO.Response.fromEntity(student))
+                .toList();
     }
 
     public StudentDTO.Response getStudentById(Long id) {
@@ -127,7 +128,8 @@ public class StudentService {
             // Validate email is not already in use (if changing)
             if (request.getDetailRequest().getEmail() != null && 
                 !request.getDetailRequest().getEmail().isEmpty() &&
-                (studentDetail.getEmail() == null || !studentDetail.getEmail().equals(request.getDetailRequest().getEmail())) &&
+                (studentDetail.getEmail() == null || !studentDetail.getEmail()
+                        .equals(request.getDetailRequest().getEmail())) &&
                 studentDetailRepository.existsByEmail(request.getDetailRequest().getEmail())) {
                 throw new BusinessException("Student detail already exists with email: "
                         + request.getDetailRequest().getEmail(),
@@ -135,7 +137,8 @@ public class StudentService {
             }
             
             // Validate phone number is not already in use (if changing)
-            if ((studentDetail.getPhoneNumber() == null || !studentDetail.getPhoneNumber().equals(request.getDetailRequest().getPhoneNumber())) &&
+            if ((studentDetail.getPhoneNumber() == null || !studentDetail.getPhoneNumber()
+                    .equals(request.getDetailRequest().getPhoneNumber())) &&
                 studentDetailRepository.existsByPhoneNumber(request.getDetailRequest().getPhoneNumber())) {
                 throw new BusinessException("Student detail already exists with phone number: "
                         + request.getDetailRequest().getPhoneNumber(),
